kubernetes/tree-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tree-app-deployment
  name: tree-app-deployment
  namespace: pipeline22
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: tree-app-deployment
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tree-app-deployment
    spec:
      containers:
      - image: dvaida/pipeline22:0.0.1
        imagePullPolicy: Always
        name: pipeline22
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
