kubernetes/tree-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tree-app-deployment
  name: tree-app-service
  namespace: pipeline22
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: tree-app-deployment
  sessionAffinity: None
status:
  loadBalancer: {}
