kubernetes/tree-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipeline22-ingress
  namespace: pipeline22
spec:
  ingressClassName: nginx
  rules:
  - host: demo.localdev.me
    http:
      paths:
      - backend:
          service:
            name: tree-app-service
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
